force-app/main/default/objects/Informatics_Product__mdt/Informatics_Product__mdt.object-meta.xml
<CustomObject>
    <description>Informatics Products</description>
    <label>Informatics Product</label>
    <pluralLabel>Informatics Products</pluralLabel>
</CustomObject>