force-app/main/default/objects/Informatics_Product__mdt/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <description>Line item fields</description>
    <label>Line item</label>
    <length>355</length>
    <type>LongTextArea</type>
</CustomField>