force-app/main/default/objects/Informatics_Product__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product family of Informatics Products.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>BASESPACE_SEQUENCE_HUB</fullName>
                <label>BaseSpace Sequence Hub</label>
            </value>
            <value>
                <fullName>BASESPACE_COHORT_ANALYZER</fullName>
                <label>BaseSpace Cohort Analyzer</label>
            </value>
            <value>
                <fullName>BASESPACE_CORRELATION_ENGINE</fullName>
                <label>BaseSpace Correlation Engine</label>
            </value>
            <value>
                <fullName>BASESPACE_CLARITY_LIMS</fullName>
                <label>BaseSpace Clarity LIMS</label>
            </value>
            <value>
                <fullName>DRAGEN</fullName>
            </value>
            <value>
                <fullName>TRUSIGHT_SOFTWARE_SUITE</fullName>
                <label>TruSight Software Suite</label>
            </value>
            <value>
                <fullName>INFORMATICS_ICREDITS</fullName>
                <label>Informatics iCredits</label>
            </value>
            <value>
                <fullName>IAP_BB</fullName>
                <label>IAP BB</label>
            </value>
            <value>
                <fullName>ILLUMINA_CONNECTED_INSIGHTS</fullName>
            </value>
            <value>
                <fullName>INFORMATICS_SAMPLES</fullName>
            </value>
            <value>
                <fullName>PARTEK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>