force-app/main/default/objects/Informatics_Product__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Picklist to select product type</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUBSCRIPTION</fullName>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>CONSUMPTION_ICREDITS</fullName>
                <label>Consumption iCredits</label>
            </value>
            <value>
                <fullName>ADD-ON</fullName>
                <label>Add-On</label>
            </value>
            <value>
                <fullName>PREPAID_ICREDITS</fullName>
                <label>Prepaid iCredits</label>
            </value>
            <value>
                <fullName>OPEN_PO_ICREDITS</fullName>
                <label>Open PO iCredits</label>
            </value>
            <value>
                <fullName>All Tiers</fullName>
            </value>
            <value>
                <fullName>ICREDITS</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PREPAID_SAMPLES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>