force-app/main/default/objects/Informatics_Product__mdt/fields/Quote_Line_Item_Fields__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Fields__c</fullName>
    <description>Quote line item fields</description>
    <label>Quote Line Item Fields</label>
    <length>355</length>
    <type>LongTextArea</type>
</CustomField>