force-app/main/default/objects/Informatics_Product__mdt/fields/Read_Only_Fields__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Fields__c</fullName>
    <description>List of Read only fields</description>
    <label>Read Only Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>