force-app/main/default/objects/Informatics_Product__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <description>List of Required fields</description>
    <label>Required Fields</label>
    <length>355</length>
    <type>LongTextArea</type>
</CustomField>