force-app/main/default/objects/Informatics_Product__mdt/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <description>Picklist to select subscription type</description>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
                <default>true</default>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Free_Trial</fullName>
                <label>Free Trial</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>