force-app/main/default/objects/Informatics_Product__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>Quote_Line_Item_Fields__c</columns>
    <columns>Required_Fields__c</columns>
    <columns>Read_Only_Fields__c</columns>
    <columns>Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>